--- a/MarginCollapse.html
+++ b/MarginCollapse.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Margin Collapse</title>
-    <link rel="stylesheet" href="MC-style.css">
+    <link rel="stylesheet" href="mc-style.css">
 </head>
 <body>
+     <h1 class="text-color">Margin Collapse example:</h1>
+    <p>Asal GB</p>
 </body>
 </html>
