--- a/MarginCollapse.html
+++ b/MarginCollapse.html
@@ -9,5 +9,11 @@
 <body>
      <h1 class="text-color">Margin Collapse example:</h1>
     <p>Asal GB</p>
+
+    <div class="container">
+        <div class="element1"> ♡ </div>
+        <div class="element2"> ♡ </div>
+    </div>
+
 </body>
 </html>
