--- a/MarginCollapse.html
+++ b/MarginCollapse.html
@@ -11,8 +11,8 @@
     <p>Asal GB</p>
 
     <div class="container">
-        <div class="element1"> ♡ Margin bottom set to 50px  </div>
-        <div class="element2"> ♡ Margin top set to 20px  </div>
+        <div class="element1"> ♡ Margin bottom set to 50px ♡ </div>
+        <div class="element2"> ♡ Margin top set to 20px ♡ </div>
     </div>
 
 </body>
